# 16x36_PixelClock

./: .clang-format  CMakeLists.txt  README.md  partitions_webserver.csv
components/: CMakeLists.txt
components/I2C/: i2c.cpp  i2c.h
components/SPI/: spi.cpp
components/audio_capture/: audio_capture.cpp  audio_capture.h
components/html/: apcfg.html
components/html_back/: apcfg_1.html
components/i2c_devices/: i2c.cpp  i2c.h
components/i2c_devices/ds3231/: ds3231.cpp  ds3231.h
components/i2c_devices/husb238/: husb238.cpp  husb238.h
components/i2c_devices/sht40/: sht40.cpp  sht40.h
components/key/: key.cpp  key.h
components/light_sensor/: light_sensor.cpp  light_sensor.h
components/network/: web_pages.h
components/sdio/: spi_sdcard.cpp
components/sht40/: sht40.cpp  sht40.h
components/spi_devices/: spi.h
components/spi_devices/sdio/: spi_sdcard.h
components/status_led/: status_led.cpp  status_led.h
components/wifi_manager/: ap_wifi.cpp  ap_wifi.h  wifi_manager.cpp  wifi_manager.h  ws_server.cpp  ws_server.h
components/ws_matrix/: animator.h  gfx_driver.cpp  gfx_driver.h  matrix_hal.cpp  matrix_hal.h  scene_manager.cpp  scene_manager.h  ws_matrix.cpp  ws_matrix.h
main/: CMakeLists.txt  main.cpp
material/transform/: pixel_mod_tool.html  pixel_mod_tool_v2.html  to_pixel.py
